Create Project Hibernate 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 db.driver=com.p6spy.engine.spy.P6SpyDriver
-db.uri=jdbc:p6spy:mysql://localhost:3306/rpg
+db.uri=jdbc:p6spy:mysql://localhost:3306/movie
 db.dialect=org.hibernate.dialect.MySQLDialect
 db.user=root
 db.password=qweqwe
